--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
+    "@types/leaflet": "^1.9.21",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "next": "15.5.9",
     "next-intl": "^4.3.12",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-responsive-masonry": "^2.7.1",
     "styled-components": "^6.1.19"
