--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
+    "@types/leaflet": "^1.9.21",
+    "leaflet": "^1.9.4",
+    "leaflet.locatecontrol": "^0.87.0",
     "@types/lodash": "^4.17.23",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
